# DroneShow

./: .gitignore  CMakeLists.txt  README.md  platformio.ini  sdkconfig.defaults  sdkconfig.esp32dev
central/: README.md  mqtt_subscriber.py
components/config/: CMakeLists.txt
components/core/: CMakeLists.txt
components/core/hal/include/: 10Dof_IMU.h  sensors_icm_20948_bmp_280.h
components/core/hal/src/: 10Dof_IMU.c  dshot.c  dshot_esc_encoder.c  sensors.c  sensors_icm_20948_bmp_280.c
components/core/modules/include/: math3d.h  mqtt_module.h  pid.h  position_controller.h  position_controller_pid.c  power_distribution.h  sensfusion9.h  stabilizer.h  stabilizer_types.h  static_mem.h  system.h
components/core/modules/src/: attitude_pid_controller.c  commander.c  controller.c  controller_pid.c  estimator.c  estimator_complementary.c  estimator_kalman.c  kalman_supervisor.c  mqtt_module.c  outlierFilter.c  position_controller_pid.c  position_estimator_altitude.c  power_distribution_stock.c  sensfusion6.c  sensfusion9.c  stabilizer.c  system.c
components/core/utils/include/: cf_math.h
components/dshot_component/: CMakeLists.txt  dshot.c
components/hmc5883l/: CMakeLists.txt  hmc5883l.c
components/imu_component/: 10Dof_IMU.c  CMakeLists.txt  Waveshare_10Dof_D.c  Waveshare_10Dof_D.h  (+1 more)
include/: mqtt_module.h
legacy/: mqtt_module.c  mqtt_module.h
main/: CMakeLists.txt  drone_api.h  index.html  main.c  ws_server.c  ws_server.h
src/: CMakeLists.txt  esc_control.h  main.c  main.cpp  mqtt_module.c  mqtt_module.h  utils.c  wifi_module.c  wifi_module.h
(+10 files in other folders)
